--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
 
-body{
+body {
     background: #222;
 }
 
-.card{
+.card {
     width: 100%;
     max-width: 470px;
     background: linear-gradient(135deg, #00feba, #5b548a);
@@ -22,14 +22,14 @@ body{
     text-align: center;
 }
 
-.search{
+.search {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.search input{
+.search input {
     border: 0;
     outline: 0;
     background: #ebfffc;
@@ -42,7 +42,7 @@ body{
     font-size: 18px;
 }
 
-.search button{
+.search button {
     border: 0;
     outline: 0;
     background: #ebfffc;
@@ -52,28 +52,28 @@ body{
     cursor: pointer;
 }
 
-.search button img{
+.search button img {
     width: 20px;
     margin-top: 5px;
 }
 
-.weather-icon{
+.weather-icon {
     width: 170px;
     margin-top: 30px;
 }
 
-.weather h1{
+.weather h1 {
     font-size: 80px;
     font-weight: 500;
 }
 
-.weather h2{
+.weather h2 {
     font-size: 45px;
     font-weight: 400;
     margin-top: -10px;
 }
 
-.details{
+.details {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -81,18 +81,32 @@ body{
     margin-top: 50px;
 }
 
-.col{
+.col {
     display: flex;
     align-items: center;
     text-align: left;
 }
 
-.col img{
+.col img {
     width: 40px;
     margin-right: 10px;
 }
 
-.humidity, .wind{
+.humidity,
+.wind {
     font-size: 28px;
     margin-top: -6px;
+}
+
+.error {
+    display: none;
+    color: #ffebee;
+    background: #5b548a99;
+    padding: 12px 25px;
+    border-radius: 30px;
+    margin: 20px auto 0;
+    font-size: 16px;
+    width: fit-content;
+    backdrop-filter: blur(2px);
+    border: 1px solid #ffffff30;
 }
